--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+uu<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -681,7 +681,101 @@
             </li>
           </ul>
         </div>
+          <div class="footer-subscribe-wrapper">
+            <p class="footer-subscribe">Subscribe</p>
+            <form class="footer-form">
+              <label class="footer-subscribe-label">
+                <input
+                  class="footer-input"
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                />
+              </label>
+              <button type="submit" class="footer-form-button">
+                Subscribe
+                <svg class="footer-telegram" width="24" height="24">
+                  <use href="./images/icons.svg#icon-Frame-3-1"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
+        </div>
       </div>
     </footer>
+    <!--_________________MODAL WINDOW____________________________-->
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="close-button" type="button">
+          <svg class="close-icon" width="8" heigth="8">
+            <use
+              href="./images/icons.svg#icon-close-black-18dp-2-1-1"
+              width="8"
+              heigth="8"
+            ></use>
+          </svg>
+        </button>
+        <p class="form-title">Leave your contacts and we will call you back</p>
+
+        <form class="form-callback" name="form">
+          <div class="modal-field">
+            <label class="modal-label" for="user-name">Name</label>
+            <div class="imput-wrap">
+              <input type="text" name="user-name" id="user-name" />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black-18dp-1-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="modal-label" for="phone">Phone</label>
+            <div class="imput-wrap">
+              <input type="tel" name="phone" id="phone" />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="modal-label" for="email">Email</label>
+            <div class="imput-wrap">
+              <input type="email" name="email" id="email" />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-black-18dp-1-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label class="modal-label" for="comment">Comment</label>
+            <textarea
+              name="comment"
+              id="comment"
+              rows=""
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="privacy-container">
+            <input
+              id="user-privacy"
+              class="visually-hidden"
+              type="checkbox"
+              value="true"
+              name=""
+            />
+            <label class="privacy-label" for="user-privacy">
+              <span class="privacy-checkbox">
+                <svg class="privacy-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Property-1click-1"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="privacy-link" href="#">Privacy policy</a>
+            </label>
+          </div>
+          <button class="modal-submit-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
