--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-uu<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -604,7 +604,7 @@ uu<!DOCTYPE html>
       </section>
     </main>
     <!--______________________FOOTER________________________-->
-    <footer class="footer">
+    <section class="footer">
       <div class="container-footer">
         <div class="footer-logo-container">
           <a class="footer-logo" href="./index.html"
@@ -681,37 +681,36 @@ uu<!DOCTYPE html>
             </li>
           </ul>
         </div>
-          <div class="footer-subscribe-wrapper">
-            <p class="footer-subscribe">Subscribe</p>
-            <form class="footer-form">
-              <label class="footer-subscribe-label">
-                <input
-                  class="footer-input"
-                  type="email"
-                  name="email"
-                  placeholder="E-mail"
-                />
-              </label>
-              <button type="submit" class="footer-form-button">
-                Subscribe
-                <svg class="footer-telegram" width="24" height="24">
-                  <use href="./images/icons.svg#icon-Frame-3-1"></use>
-                </svg>
-              </button>
-            </form>
-          </div>
+        <div class="footer-subscribe-wrapper">
+          <p class="footer-subscribe">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-subscribe-label">
+              <input
+                class="footer-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="footer-form-button">
+              Subscribe
+              <svg class="footer-telegram" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3-1"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
-    </footer>
+    </section>
     <!--_________________MODAL WINDOW____________________________-->
     <div class="backdrop is-open">
       <div class="modal">
         <button class="close-button" type="button">
-          <svg class="close-icon" width="8" heigth="8">
+          <svg class="close-icon" width="8" height="8">
             <use
               href="./images/icons.svg#icon-close-black-18dp-2-1-1"
               width="8"
-              heigth="8"
+              height="8"
             ></use>
           </svg>
         </button>
@@ -750,7 +749,6 @@ uu<!DOCTYPE html>
             <textarea
               name="comment"
               id="comment"
-              rows=""
               placeholder="Text input"
             ></textarea>
           </div>
@@ -761,7 +759,7 @@ uu<!DOCTYPE html>
               class="visually-hidden"
               type="checkbox"
               value="true"
-              name=""
+              name="user-privacy"
             />
             <label class="privacy-label" for="user-privacy">
               <span class="privacy-checkbox">
