--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </head>
   <!--__________________BODY_________________________-->
   <body>
+    <!--________________HEDER_______________________-->
     <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
@@ -604,7 +605,7 @@
       </section>
     </main>
     <!--______________________FOOTER________________________-->
-    <section class="footer">
+    <footer class="footer">
       <div class="container-footer">
         <div class="footer-logo-container">
           <a class="footer-logo" href="./index.html"
@@ -701,7 +702,7 @@
           </form>
         </div>
       </div>
-    </section>
+    </footer>
     <!--_________________MODAL WINDOW____________________________-->
     <div class="backdrop is-open">
       <div class="modal">
