--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
       </div>
     </footer>
     <!--_________________MODAL WINDOW____________________________-->
-    <div class="backdrop is-open">
+    <!--<div class="backdrop is-open">-->
       <div class="modal">
         <button class="close-button" type="button">
           <svg class="close-icon" width="8" height="8">
