--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
       </div>
     </footer>
     <!--_________________MODAL WINDOW____________________________-->
-    <!--<div class="backdrop is-open">-->
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="close-button" type="button">
           <svg class="close-icon" width="8" height="8">
@@ -720,36 +720,37 @@
         <form class="form-callback" name="form">
           <div class="modal-field">
             <label class="modal-label" for="user-name">Name</label>
-            <div class="imput-wrap">
+            <div class=".imput-wrap">
               <input type="text" name="user-name" id="user-name" />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1-1"></use>
               </svg>
             </div>
           </div>
           <div class="modal-field">
-            <label class="modal-label" for="phone">Phone</label>
+            <label class="modal-label" for="user-phone">Phone</label>
             <div class="imput-wrap">
-              <input type="tel" name="phone" id="phone" />
-              <svg class="modal-icon" width="18" height="18">
+              <input type="tel" name="user-phone" id="user-phone" />
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1-1"></use>
               </svg>
             </div>
           </div>
           <div class="modal-field">
-            <label class="modal-label" for="email">Email</label>
+            <label class="modal-label" for="user-email">Email</label>
             <div class="imput-wrap">
-              <input type="email" name="email" id="email" />
-              <svg class="modal-icon" width="18" height="18">
+              <input type="email" name="user-email" id="user-email" />
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1-1"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label class="modal-label" for="comment">Comment</label>
+          <div class="modal-field-comment">
+            <label class="modal-label" for="user-comment">Comment</label>
             <textarea
-              name="comment"
-              id="comment"
+              class="textarea-comment"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
@@ -769,7 +770,7 @@
                 </svg>
               </span>
               I accept the terms and conditions of the
-              <a class="privacy-link" href="#">Privacy policy</a>
+              <a class="privacy-link" href="#">Privacy Policy</a>
             </label>
           </div>
           <button class="modal-submit-button" type="submit">Send</button>
