--- a/index.html
+++ b/index.html
@@ -720,8 +720,13 @@
         <form class="form-callback" name="form">
           <div class="modal-field">
             <label class="modal-label" for="user-name">Name</label>
-            <div class=".imput-wrap">
-              <input type="text" name="user-name" id="user-name" />
+            <div class="input-wrap">
+              <input
+                type="text"
+                name="name"
+                id="user-name"
+                class="modal-input"
+              />
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1-1"></use>
               </svg>
@@ -729,8 +734,13 @@
           </div>
           <div class="modal-field">
             <label class="modal-label" for="user-phone">Phone</label>
-            <div class="imput-wrap">
-              <input type="tel" name="user-phone" id="user-phone" />
+            <div class="input-wrap">
+              <input
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+                class="modal-input"
+              />
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1-1"></use>
               </svg>
@@ -738,8 +748,13 @@
           </div>
           <div class="modal-field">
             <label class="modal-label" for="user-email">Email</label>
-            <div class="imput-wrap">
-              <input type="email" name="user-email" id="user-email" />
+            <div class="input-wrap">
+              <input
+                type="email"
+                name="user-email"
+                id="user-email"
+                class="modal-input"
+              />
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1-1"></use>
               </svg>
