--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
             <div class="input-wrap">
               <input
                 type="text"
-                name="name"
+                name="user-name"
                 id="user-name"
                 class="modal-input"
               />
@@ -773,14 +773,14 @@
           <div class="privacy-container">
             <input
               id="user-privacy"
-              class="visually-hidden"
+              class="visually-hidden input-checkbox"
               type="checkbox"
               value="true"
               name="user-privacy"
             />
             <label class="privacy-label" for="user-privacy">
               <span class="privacy-checkbox">
-                <svg class="privacy-icon" width="10" height="8">
+                <svg class="privacy-icon" width="15" height="15">
                   <use href="./images/icons.svg#icon-Property-1click-1"></use>
                 </svg>
               </span>
